added read_min_max subroutine and test

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -8,7 +8,9 @@ INCLUDE_DIR = ../build/include
 
 all:
 	$(FC) -c -o $(BUILD_DIR)/QuantileTransformer.o QuantileTransformer.F90 -J$(INCLUDE_DIR)
+	$(FC) -c -o $(BUILD_DIR)/scaler.o scaler.F90 -J$(INCLUDE_DIR)
 	$(FC) -o test_quantile -I$(INCLUDE_DIR) test_quantile.F90 $(BUILD_DIR)/QuantileTransformer.o
+	$(FC) -o test_scaler -I$(INCLUDE_DIR) test_scaler.F90 $(BUILD_DIR)/scaler.o
 
 clean:
-	rm -rf *.o *.mod test_quantile
+	rm -rf *.o *.mod test_quantile test_scaler
