--- a/utils/Makefile
+++ b/utils/Makefile
@@ -9,7 +9,7 @@ INCLUDE_DIR = ../build/include
 all:
 	$(FC) -c -o $(BUILD_DIR)/QuantileTransformer.o QuantileTransformer.F90 -J$(INCLUDE_DIR)
 	$(FC) -c -o $(BUILD_DIR)/scaler.o scaler.F90 -J$(INCLUDE_DIR)
-	$(FC) -o test_quantile -I$(INCLUDE_DIR) test_quantile.F90 $(BUILD_DIR)/QuantileTransformer.o
+	$(FC) -o test_quantile -I$(INCLUDE_DIR) test_quantile.F90 $(BUILD_DIR)/scaler.o
 	$(FC) -o test_scaler -I$(INCLUDE_DIR) test_scaler.F90 $(BUILD_DIR)/scaler.o
 
 clean:
